--- a/Monitoring_dan_Logging/docker-compose.yml
+++ b/Monitoring_dan_Logging/docker-compose.yml
@@ -1,41 +1,17 @@
 services:
-  model-server:
-    image: abisat19/pcos-model:c663b12249434ca7b85d7ab17607eed5
-    ports:
-      - "8080:8080"
-    networks:
-      - ml-monitoring
-    command: >
-      mlserver start /opt/ml/model --host 0.0.0.0 --port 8080
-    # -------------------------
-  exporter:
-    build: ./exporter
-    ports:
-      - "5001:5001"
-    depends_on:
-      - model-server
-    networks:
-      - ml-monitoring
   prometheus:
     image: prom/prometheus:latest
     volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml 
     ports:
       - "9090:9090"
-    depends_on:
-      - exporter
-    networks:
-      - ml-monitoring
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+
+  # 2. Grafana
   grafana:
     image: grafana/grafana-oss:latest
     ports:
       - "3000:3000"
     depends_on:
       - prometheus
-    networks:
-      - ml-monitoring
-
-networks:
-  ml-monitoring:
-    driver: bridge
-
