--- a/Monitoring_dan_Logging/prometheus.yml
+++ b/Monitoring_dan_Logging/prometheus.yml
@@ -1,6 +1,6 @@
 global:
-  scrape_interval: 15s 
+  scrape_interval: 15s
 scrape_configs:
-  - job_name: 'model_exporter'
+  - job_name: 'pcos_model_exporter'
     static_configs:
-      - targets: ['exporter:5001'] 
+      - targets: ['host.docker.internal:5001']
