--- a/Monitoring_dan_Logging/requirements.txt
+++ b/Monitoring_dan_Logging/requirements.txt
@@ -1,7 +1,7 @@
-mlflow
-dagshub
 flask
+joblib
+pandas
 prometheus_client
 requests
-# Pastikan versinya sama dengan yang di CI
 scikit-learn==1.3.2
+cloudpickle==2.2.1
